using System;
using System.Globalization;
using Microsoft.Maui.Controls;

namespace CourseworkApp.Converters;

public class StringToBoolConverter : IValueConverter
{
  public object Convert(object value, Type targetType, object parameter, CultureInfo culture)
  {
    return !string.IsNullOrEmpty(value as string);
  }

  public object ConvertBack(object value, Type targetType, object parameter, CultureInfo culture)
  {
    throw new NotImplementedException(); // Not needed for this use case
  }
}
