namespace CourseworkApp.Views;

public partial class Administrator : ContentPage
{
	public Administrator()
	{
		InitializeComponent();
	}
}